@@ -7,17 +7,24 @@ AUX ftdi_eeprom-0.3-newer-chips.patch 726 SHA256 428c88044740effe1a2efb5ea408cf0
 DIST ftdi_eeprom-0.2.tar.gz 571464 SHA256 b3e0409d69783ecfa90c893c817bb584296b4c45d9f17b0f2fdd7c07ef411a3f SHA512 108e84cca16a24b0d66578b65d0450cea02faca3f1fec4938563ca99aa92b58e2b6c39fde92d3b729970b7a89b8ea505b27888287785ecc425ef521a779a1867 WHIRLPOOL a8ee4ad513bfacb6baf82aed0f42ff84990e49bd9d518f62334c6f03acffe458e8b133ed5933a002a870f099320a14c5c0d4f7435209c5db268e24b6d07e74e0
 DIST ftdi_eeprom-0.3.tar.gz 103723 SHA256 7b40ec5abb2c93362b9636974e4e4715cb588121c1e1da09d7f499ac7f12d056 SHA512 292617434d618c1f47fd94922cff1c32da271a9262b70ee56a8931b7a07ec1ae2cfe92a0ddfe14d9516d295188dc0a750c0cf7f5a26bb4c3fd384f252aeda18d WHIRLPOOL ccc68295e4d1af063623f359f07918ff2bb916932b02333509ff9f5ea5d66ac4f435026ca9a1ed8942520dbd8956bac9adbc5163967429e96ccc14041c5a3c4a
 EBUILD ftdi_eeprom-0.2.ebuild 748 SHA256 a85b4be35f7b04b7213dcb6f2cf9977d919bd7ff0a28d217dbe42a841e2518c3 SHA512 aa5cda9720335c8d08d0799ed70ede078fde274e4b7be4a3c8db423b6c8f84b083220f8e121dad8e716d669e35a5b53f3be9e2515c97316637cfc75795516fe7 WHIRLPOOL d566d001892bbebb11cf31b4bcc4a8ce7b1b9327de33d7334ce7b6f5559cadcb293a7e12ee8478a03bdadbef4feb017953b437c9eb8bd168920d8811eec14730
-EBUILD ftdi_eeprom-0.3-r1.ebuild 763 SHA256 8cdb25383eaa075aa459cde23fa5a398c9af94f0710ac80022b1912cd6bb1c82 SHA512 1d2d378bfb4f3d9cba103122d0b652b145e5bb1fd30e4ab5cdbf37e8ddd023f84a6ca5f03f2fa5c4775f60a1525e1550afb8f6a9a805a3147cf56d4d43b266dc WHIRLPOOL 8c5da3d1afd4f8e519a06b82bd793cbbd7761d923e54085192e29a558d79fb90871d526109e12376c4a816116c5894c3cb349b7e0bf66b10b13e96eec8697592
-MISC ChangeLog 2135 SHA256 51d1cefe054b9602eca1512655623b84facc836f171e67d789a03b67ae635e7f SHA512 31f0480494f656ae769ecfd1404a31f405ad228c4fa8092005b88f1fc9ea2fa44f6d100233b7ca707eae305b714b71973adc274e9aa8919c900dd948cfdbf2ac WHIRLPOOL 967399c858a99722cc6cab5264ae49d7b8fa5612c7fc1687ebcd725b54d22185e569afe9191bd5192bdf9232e4ccbddfd6c1bfe156b99fd24abf5c404007d86a
+EBUILD ftdi_eeprom-0.3-r1.ebuild 768 SHA256 f9884c44716b4a9d6789a788c4f170f6892a1f35b2c429f52cb3212d3afd63b8 SHA512 bf4fbafaa2df19dc42696974cedf6d10818d9df5d8118a74fb6f6d58535f9c5dabb6a9ae9988b3d822f13584232cb591ac605fc6f185fda234576e98163c0d7a WHIRLPOOL fd68f14fcafec27017d23dd51a72d320c050158d43f68c2f2784562f8a12f6433de035891459d06d957506873a9c26337f0fdd012dd645716dbc484013af33d2
+EBUILD ftdi_eeprom-1.0.ebuild 598 SHA256 852059ccfb0351067a6b29bec0144bece43d3727c67776b91287d73c1561fc3d SHA512 2d4bb86b20aa0977dece1098f87e5e65ed5cb52070efb8e6dc1f2589e37932bde2faf8227c24ad54b390621cff1b9d41a5b193f3b9f6019b53f1ded74ff81123 WHIRLPOOL 7f37fae19b01dc8e461d9702c0225229d56ce619f6111920db3aaba1ad5ad62bdc9c7da55eff4d18ea4b0ba1df0d6a0726f10247b72e366f5a2ca2c16378f173
+MISC ChangeLog 2445 SHA256 1a8cd349cc23e141f7c0f2a567ac786a4144f047bbe85ee7399163f97f7f3fa7 SHA512 be9ec90ee5c65e8712c06959ef9688f90e44da963a40a39f3bb427606c647f72e2998db77f821b42e277d69c9bf28fe16d100112e767504ee0d176301b530ef5 WHIRLPOOL 76b1cf205ba0237cb608c1f78672136e0708902cec161cbc64d20e5b3db31533a61693c61a1c971df859f35451a6fe239ab891a1b9b1bbe02728abe4ae044e86
 MISC metadata.xml 165 SHA256 fb7ede94a0633f77d601e3e81580eac1624a3bca14401a49d94082579507ba0a SHA512 2be6b57c8e55824d56afbe9ab641639e6e1b4cf73bf2795c2778e373777ad545b5211e06510f13703583e7bb18817f623bc00dddbc8c52ad5f100f085e5dfddf WHIRLPOOL 7fe27fc76b523efadbe65a61c187e78592bc1563423791709914a6263c587a8843c75e19c64f989c7fc8a105c6433a874116ec670df3a27b930634d7e14fb1fe
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJQSpN1AAoJEEqz6FtPBkyjwu4IAJHd9dd+uS/9C+YFxVn0ihEl
-UMzjL5TKY4H5TLpQEod/ChStsfK8DON1YygbGiyJNzObhwyfIUyRLTlihVaiQjNm
-QHRtXKJHlzToTI0bfLrE2ma1jLjfPTegBJDb8G9+yK23Q5Fy0ictjECUw5pmkg1z
-9RG/utvHwWdf2ljMXEflsItyQZhsNEQO6e5qqI++Q88gB5+j54anKaPNmml+Zovv
-bXjQon0BPXcl2DB4Js/6yVWgyzD9ZR2ni94//9ZKpwS5kD4nZ+ka5CQZlViW3jK4
-1Khkt5+LDw+7AyUEt9RsCfc/oN7Q3FrkCzVs0R83H1wVePcSUnuQiNgfT5Oqt2I=
-=8PH7
+iQIcBAEBCAAGBQJVUyqsAAoJEPGu1DbS6WIAT4oP/1gB2alV/RXHrT5fbYFUMyzZ
+dUphGiB9D22pRWeXraR9CDV8HMg8+x0l6PugZt6/p0828TvP9y9FXNgC8hyUmM9w
+10dVPKBQBGueUTb/2kmzGmxS9986kPe8IcfN4A+mFH0vwDbKui4aEgcgRuj2XsZh
+RTA9vzSLjzXD1SPlFXHs8plpF3KFTJxFr7+w12/PW9jgljDKeu28KArdle3lMXNE
+p+iq1iIrFUNvySlF1J3ep2DHtumjOAvOpyZhFJKbLklSTvQ/Eymi55/+wZSsO+A0
+meR5ssW9ey0SiHI6tAm9DogmRFTNsUFMaJG5mry6lO0sJuatjpqqsH7mWlfG1IYv
+Bui4XEkZx7R0XAQ6hgaeDv9Z6jnU1nhSgfr6JOuaT/O73zdekUmAk8CQEwlqkLQs
+SpnXeD7uhb5IdyIdBoFV51FKmhbhRBf6zU56a2pFiCI1vBO8T/hfM+ZRdBfMW+T7
+j7XhOT70c9JxveKr1P2yJK5qbe1gV1eAoChgt6eLRArXHYjhVstNfl53KtweAAP3
+q+D8ULWSrfMDCBig7CWn5BdxstSzF+ssBaPGocKzeYUTOtVxm0hBxxPPbBUXg/zV
+hMzLWy8Y10p0ZoVW80oxmazrB2rXTVdyjBj6LpC7DgM/ad9bvMV29bgElWnqN6bh
+qAJaRvWqyJqK9NIHYOpZ
+=iZE4
 -----END PGP SIGNATURE-----
