@@ -7,28 +7,30 @@ DIST libftdi-0.18.tar.gz 398380 SHA256 5b6f3c3ee51c6aa24d3b87135e01762cf68821d1c
 DIST libftdi-0.19.tar.gz 406671 SHA256 567c9d2c42d92fc401c5aba2deed45ffb2433990984e816bcdf31e441aef06be SHA512 c6deefe8c83063343321e8c2c6b6c1c2842a9f1caf4e54f47106c3c4aac638736f19fecf91582c6cc9f4917c4d140157440c360ce3a030dfb7fa027483bab972 WHIRLPOOL b3ee2812697cb8e0e549d580b07b2d67f2bc7bbb5da823e80172748d2d907e67c36314c4524beb2278e131a57c1ae4e25efaaa7b243ab80b30a3f88fa9f6fd7a
 DIST libftdi-0.20.tar.gz 423570 SHA256 3176d5b5986438f33f5208e690a8bfe90941be501cc0a72118ce3d338d4b838e SHA512 540e5eb201a65936c3dbabff70c251deba1615874b11ff27c5ca16c39d71c150cf61758a68b541135a444fe32ab403b0fba0daf55c587647aaf9b3f400f1dee7 WHIRLPOOL b1eab592bd6a21a123c7e951d5e4cdafc740c20773b8c5c7c86eef2a05bc8a190a2758a04187d3436de464a49dc329d4e4c9e54792287cc5c39a0ec7d08425d2
 DIST libftdi1-1.0.tar.bz2 97072 SHA256 7290fd38208d8c00d25ed13ce172aaa0403b37148080e4a33a99837022d2b321 SHA512 e733db0bf826415971c64723fe1e56cb1201fa1b9e3a3f04a2a47e1d16c543ae29c634a514f5ff5ca422c2e3b3e1715988c84df1dc66114700209dfb1e6d96ae WHIRLPOOL 82b384b396b12681d88531082e6a5d9d765934877192001106b7bb2ee91da91d0941eb7514b7b091fca403d47b4458a5ae06c5249b0cb0114a0fbe7b7056b7ed
+DIST libftdi1-1.2.tar.bz2 100672 SHA256 a6ea795c829219015eb372b03008351cee3fb39f684bff3bf8a4620b558488d6 SHA512 d175e2b39dda880653a2e46db67e49a8921095e69eff6598159c3c31292d4ce76617c2f1617fd6727b08c930fcea335d8ef01857debbb60e7ac384b516d38a05 WHIRLPOOL 7e6646a23b8e8f1c0fec6b1ad3231797653e1788abfb7340cd391c792d2f48e4cada0ca832e325947b49d964919d5b81cddd8b43f3962d185605afbabd743fbf
 EBUILD libftdi-0.17.ebuild 1294 SHA256 6153e07439128c3bcf3933eedb8e29877658d0ef3d233eed6a83d31113b35646 SHA512 eb11f176753acdc9cf05fb7b7ec9254c22eba77c6ace34245d855857d36eed798e0d4575b1dab6f81c49491f875c5701f1ba3044ca74268365a9c46a6606bb33 WHIRLPOOL f11e3dee11338dd6a3a2ca203872ebb105eb4fcf36ea72f63a482f449ba53326a20d5ae8b1f98ba25cb1f4bff6a1885854cb9b07af7a61c125e5dc1dc66e5f5f
 EBUILD libftdi-0.18.ebuild 1218 SHA256 2a7269828374fc165f0b9ff285db30081223c1123394f03ab215cddfda8739ad SHA512 6c58aec3ec1a984d729b3f9696527c87bc37a6418bc511adc0f589cb10cf43405d5d1ce55242e802f88dc9e0f02892c6f6ba41568af4c4aeae9bd1b6d0883b77 WHIRLPOOL 2fcfc60f515ec3a3f4389aee092a75b34b7f35aea2c6654d22195281df9fdd0bcb9f0000d118720c2777d29284061abb63bb15b4854e745de28ca71812e48b06
 EBUILD libftdi-0.19.ebuild 1322 SHA256 ef3636c64f9fe692e676096393721b010a0874172881f5792ae9b2f80d371052 SHA512 c653271be025ba0c273d684c5523b1c6be2ff7b137068b4dd6f535549f9e9e37f69d2d2e5756f46c8f7b8bc8ba7d59a77d7452df33550e17e1449dc520ff86da WHIRLPOOL 9930f6aaf3217f04266cabcf88d2207090e3aeca8eed926e99d033c0613dcb6b88096c351ddfbe9058b5de3c52485de2455cc13cdb940eabe1fd5170da54f32f
 EBUILD libftdi-0.20.ebuild 1592 SHA256 c1559b8843c78ffac6e114eff0cf6bd7051cef5a911c75eaefd930f2770262e0 SHA512 a4d8ebe3b952a08b3d3b082b48cc53fd000792596255df09987243c417a0452708c8760fe4e00cdd930540fae14070415a0700c683657dc90240880c19955ffb WHIRLPOOL 76c6d044eb9c0400ccabbf6d8992a31f0a24b32e1c5accb4be222d9402e3a930aba99673f281e04560bdb419df25ddb49869b597e8f1f05ca9a9b35d9859ace8
 EBUILD libftdi-1.0.ebuild 1662 SHA256 fa5dcb540750ea0fcb539d814b6a32cb3f4f8d141370b5d685acd11bf6cb1631 SHA512 8017f53979ad846bc47d0edfecded1532e8689b15c5c819f37bc7e62f69d3b8d44b73148c71c6abfeca72e4409d30341d7430c441c1dd37d6e4af1d60b065536 WHIRLPOOL 16c473a99c3c233da398ab3451e828baa0b3cb0bfede8556bf6342e239cb3b5468829bc9b2835aeef936f22893e0600e47e81d77b53e85d91d27daa018d844d1
-EBUILD libftdi-9999.ebuild 1561 SHA256 62751779f5bb3edfdfaeba022c0bc7e81ba423822ad016e1582ad50cda53cf67 SHA512 cb7de8f39bc4818d52f66ac0f4e366beed0e61793aee667a54faba66b96d338b8b23337db3c8fcb74fc6196c25542397b7f710047e9d9dba54ed0da861900959 WHIRLPOOL d37c52cd9c7355063930115a3fac6cb559e826c288180abc9200ad979ad9b28a6a873114fb7d77823ef9832bce60e15889ebf5347ca6b1c7845dc666e6c1bbf8
-MISC ChangeLog 7890 SHA256 df4ca969817071e48a2c2b63d3f2558aa1f8a0e87272d4df6bd95b467049a75b SHA512 f29157c8619ebbffbffea632a2359e0f893438c654e7c4c4d86988f2335a9bebda54672afaad1446e76821b2e7acfc491d7c211edc452b51f9dcb2bb17081d21 WHIRLPOOL fb68b0512c50bcd24afdbdc8716a04d4745a5fb05b539c1990c34c4ed8dd7e4561c2315653ed68312b4cc7c1717d5700a08b3c77b11403390f8ce09ae8bb18b4
+EBUILD libftdi-1.2.ebuild 1612 SHA256 f298566447708aa609ded1926f0c5a7be574aecb20f19c688c5978ea8dc62809 SHA512 eca2380b0ed5a64e483d3d174979431a4e4acd5a194383ad882ae446d84310310dd6e84771cdfb5d81bf41d87981e93f28aade4d398fa166de54b61816677bce WHIRLPOOL 4b2dd1502fc47944a49bb71523801dd118e3163c8929170b4c4885f067edd378e5e02b92cc3b2c3211d60852be043156c1c4390d18b62bab1c0733f9ed53d5bc
+EBUILD libftdi-9999.ebuild 1614 SHA256 4364185c3044ba5c854dab15c439552159ed9e455d3e0800007f59290d9457eb SHA512 7d45e07713e3f3b2586eda5701b5ae10a795bf7437acf808fd24a4b3ef8f584e4e60da2e6f4c655b234ef4de934ea36af6bac4a2795e1ff42c3b15d8afda9afe WHIRLPOOL e86ba36421de343066256119eb11d6df512870153922895cd34f6198e36496460521710bff58b0da3ad8f751bd223acc2343403c4c6cc9c48d4ceff930311ec6
+MISC ChangeLog 8056 SHA256 2e4cb18b680e90a85ddb663916869cff4556c768855dcb8be582036f13dbcd24 SHA512 fc6d7ec9f910db775628a9e76837fac8ad19bee92bf7c15a82ce96b20e713b2bcf7877dadfd2446bef43630a89fe3e1e7393376fff52279d765a026851742e2b WHIRLPOOL 05524b31a9896122288cc26458350caab7721e4ce2d699638e9b9eed8c3957cbb5cf62338fdc0b71f9730fcb5f27173f3c2dd7c92d03ddd3f662911aaa111e2a
 MISC metadata.xml 235 SHA256 586ff35feff5b101f251813344f1b28cee4acaf8cdd5364d64160e7dac6eac14 SHA512 f5670bfd4d3039cd527b989fa5235b790c901af56277a84c3f3ae1472e7f28644895ad36f4d70124081365c7129658dcfc4ad637be4f85121d7d1bde34c883ea WHIRLPOOL d9eaff2bafca2108ed9ddaa2abb8458b7a01c3b0d693d47b3dd5c3ecde2fbd35138aee67c6d536a51e720cca5cd4b77693e552a4a126fab1b173942dbf4f8453
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVMcosAAoJEPGu1DbS6WIAARwP/23eGsz+nANxYnuk0gsVD5OC
-Ymz2F7TfkKv2nxrjXB2omhCU9Htipxx4TNpbUvLCwF30d2jvTVSnOPU6UKymRvZP
-4aRTyaHdpsqjJmWKoVA3XlvejxnxgKPxJEf9sJOmV1oh6PMqo8bJkxsPnznr2xTc
-TtyLfU4+vplZUGbepGTW/tT2W0HiACXcysgctE1PE3tT1ncrt1vBYbtEiiPK8dQE
-JjlEcwUivEnuVtBNX71XdkuWOSdF1Sh8FH6UqJDV+h1Gr2BWKRLlIUGbWAucYMkK
-oBZvrsBX2xoCYJH1jDnFB4lvDQNYDFLizbnn8zEro6Q/UtLtR3uPKXZFMCi+nn5T
-EsWOcppLuoqJ6x033Vy78r87fZN1lbhXtXhFAjdt51Q2L0FQmjZOcDyUX9GZbPIh
-Yrx9JzTLmJihIKCxFAA7VfnkSChKuBF7JtnYuUVTGP+kQvg8LyLRouT1VePX3aOp
-pf21CM3N81eKyU/Yp5hBlPAgnUNMzdzIemuF63ZAj7JIBL7vjQD+gtmCqbGGAIts
-m1TekrANUx5drBBrHSCv2NOJvDHE4uB4uQoX6mMzQTmRYnEKgVyPhPQFTShX2cA1
-ak7huJWXpqmCZI3gTnaiFIO35sNoazqqBkKhZK4n1SkXm/c9++08hRnTkRMAmW9C
-W/9mfs5CZvDhqTvVAnta
-=knZK
+iQIcBAEBCAAGBQJVUyt5AAoJEPGu1DbS6WIAf9sQAIh4jNFNp+GkWqBSL236zRaW
+VsrxpqUhrQ3mIrHTaHlcSafZilFCZdcpLHK5DSb/OsGauuw7mNrmA4YhK1UblRhP
+nEGl67KHGaelcYCUn+Yn9eXcajmmzj+b/kFHAr9VA5GiewRESYpBd8fszDLlbEVl
+Pb3Wlq/HjIa+1sgvJYsAbF/xleZO8EUFiZm4jGX7dYuf+Nj3nRDzwI/i3oEKG87I
+imJ3+J2QuP9rya7dB404ttI+iC3VOJLtAMdwDer6frZRrXX5Fl2rYBHpZ7LeMs07
+7XVmmLY66IWvEus9m5rNXeTRfPFZuKDsDtPoaG/q70GlW7hg9mAw/PNdYIiX3e0v
+kxzhvJb7wLsU8yOaIHr8ypw5CperRm55dM6ll3rGPtzquYgf4ZrxEumTzj64Fp5k
+aSt41w+I6QiWsMoQC2GkvEHhleXizAxldt5SnM5q2A6GmP0fjM6/1NptnEKwleW2
+D6edwkBfQG0VBVntKiRb3jVZxjhVR2Px8dhr+vAuk4fW62ET7RaPA6YRFuXtvo+D
+R9YV43Au3J7yoMjbIuivmFWHFQjQHbG36JlIij815fyZpAVnXmqz8UPMnxJg2RrQ
+ABa8rUTA78YN4dLGrxnJnvOchrRUw+FGD2yy3bU9vw6871WVr/QGzQplYc5AZSzV
+hiipXqbNT8dIZliUM4b/
+=1hbH
 -----END PGP SIGNATURE-----
