@@ -1,12 +1,12 @@
 DEFINED_PHASES=install prepare
-DEPEND=dev-embedded/libftdi dev-libs/confuse
+DEPEND=<dev-embedded/libftdi-1 dev-libs/confuse
 DESCRIPTION=Utility to program external EEPROM for FTDI USB chips
 EAPI=4
 HOMEPAGE=http://www.intra2net.com/en/developer/libftdi/
 KEYWORDS=amd64 x86
 LICENSE=LGPL-2
-RDEPEND=dev-embedded/libftdi dev-libs/confuse
+RDEPEND=<dev-embedded/libftdi-1 dev-libs/confuse
 SLOT=0
 SRC_URI=http://www.intra2net.com/en/developer/libftdi/download/ftdi_eeprom-0.3.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=c0835d19a9b363132e183d7a5aecd756
+_md5_=25dba7a345599a8da4ba0183faaba96a
