@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=virtual/libusb:1 cxx? ( dev-libs/boost ) python? ( dev-lang/python ) tools? ( !<dev-embedded/ftdi_eeprom-1.0 dev-libs/confuse ) doc? ( app-doc/doxygen ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=Userspace access to FTDI USB interface chips
+EAPI=4
+HOMEPAGE=http://www.intra2net.com/en/developer/libftdi/
+IUSE=cxx doc examples python static-libs tools
+KEYWORDS=~amd64 ~arm ~arm64 ~mips ~ppc ~ppc64 ~sparc ~x86
+LICENSE=LGPL-2
+RDEPEND=virtual/libusb:1 cxx? ( dev-libs/boost ) python? ( dev-lang/python ) tools? ( !<dev-embedded/ftdi_eeprom-1.0 dev-libs/confuse )
+SLOT=0
+SRC_URI=http://www.intra2net.com/en/developer/libftdi/download/libftdi1-1.2.tar.bz2
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=05d309cc29bee5737a469223a6ad096d
