@@ -1,11 +1,11 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=virtual/libusb:1 cxx? ( dev-libs/boost ) python? ( dev-lang/python ) tools? ( dev-libs/confuse ) doc? ( app-doc/doxygen ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-vcs/git
+DEPEND=virtual/libusb:1 cxx? ( dev-libs/boost ) python? ( dev-lang/python ) tools? ( !<dev-embedded/ftdi_eeprom-1.0 dev-libs/confuse ) doc? ( app-doc/doxygen ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-vcs/git
 DESCRIPTION=Userspace access to FTDI USB interface chips
 EAPI=4
 HOMEPAGE=http://www.intra2net.com/en/developer/libftdi/
 IUSE=cxx doc examples python static-libs tools
 LICENSE=LGPL-2
-RDEPEND=virtual/libusb:1 cxx? ( dev-libs/boost ) python? ( dev-lang/python ) tools? ( dev-libs/confuse )
+RDEPEND=virtual/libusb:1 cxx? ( dev-libs/boost ) python? ( dev-lang/python ) tools? ( !<dev-embedded/ftdi_eeprom-1.0 dev-libs/confuse )
 SLOT=0
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	git-2	e28f0d8a9b321431b1e699782851b827	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=6fc90a0497f9486a7b89835d80692065
+_md5_=5117a414cb6e49219e1dcd192c03fe24
